# nox

./: readme.md
relaypay/_odra_full/: CHANGELOG.md  README.md  _Cargo.toml
relaypay/_odra_tmp/: CHANGELOG.md  README.md  _Cargo.toml
relaypay/backend/receipt-api/: .env.example  package-lock.json  package.json
relaypay/backend/receipt-api/src/: config.ts  index.ts
relaypay/backend/relay/: .env.example  package-lock.json  package.json
relaypay/backend/relay/keys/: public_key.pem  public_key_hex  relay_public_key.pem  relay_secret_key.pem  secret_key.pem
relaypay/backend/relay/scripts/: check_balance.ts  check_balance_rpc.ts  deploy-casper.ts  (+2 more)
relaypay/backend/x402-api/: package-lock.json  package.json  tsconfig.json
relaypay/casper-contracts/: .env  CHANGELOG.md  Cargo.toml  Odra.toml  README.md  build.rs  package-lock.json  secret_key.pem  setup.bat  stripped.wasm
relaypay/casper-contracts/smart-contract/: env
relaypay/casper-contracts/smart-contract/src/: lib.rs  settlement_registry.rs  settlement_registry.rs.bak
relaypay/casper-contracts/src/: lib.rs  settlement_registry.rs
relaypay/casper-contracts/wasm/: SettlementRegistry.wasm
relaypay/evm-contracts/: .env.example  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
relaypay/evm-contracts/contracts/: PaymentRegistry.sol
relaypay/evm-contracts/scripts/: deploy.ts  trigger-payment.ts
relaypay/evm-contracts/test/: PaymentRegistry.test.ts
relaypay/frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
relaypay/shared/types/: receipt.ts
(+34 files in other folders)
