[package]
name = "settlement-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = "2.8.2"

[dev-dependencies]
odra-test = "2.8.2"

[build-dependencies]
odra-build = "2.8.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8.2"
odra-cli = "2.8.2"

[[bin]]
name = "settlement_registry_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "settlement_registry_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "settlement_registry_cli"
path = "bin/cli.rs"
test = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
